--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.75"
 hound = "3.5.1"
-plotters = "0.3.5"
+image = { version = "0.24.7", default-features = false, features = ["qoi"] }
+nalgebra = "0.32.3"
+rustfft = "6.1.0"
 wt = { package = "wasmtime", version = "14.0.4" }
