Update dependencies and rename rustfft into fft

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,17 +5,17 @@ edition = "2021"
 
 # TODO: executables should be able to drop dependencies via features (use required-features) (mention in readme)
 [dependencies]
-anyhow = "1.0.75"
+anyhow = "1.0.79"
 argh = "0.1.12"
 hound = "3.5.1"
 image = "0.24.7"
 nalgebra = "0.32.3"
 ordered-float = "4.2.0"
 rayon = "1.8.0"
-rustfft = "6.1.0"
+fft = { package = "rustfft", version = "6.1.0" }
 tracing = "0.1.40"
 tracing-timing = "0.6.0"
-wt = { package = "wasmtime", version = "14.0.4" }
+wt = { package = "wasmtime", version = "16.0.0" }
 
 [profile.release]
 lto = false
