--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [features]
 profile = []
+apple-accelerate = ["dep:apple-accelerate"]
 
 [dependencies]
 anyhow = "1.0.79"
@@ -20,7 +21,7 @@ tracing-timing = "0.6.0"
 wt = { package = "wasmtime", version = "16.0.0" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
-apple-accelerate = { git = "https://github.com/zetanumbers/apple-accelerate.git" }
+apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
 
 [profile.release]
 # lto = true
