--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
+[workspace]
+resolver = "2"
+members = ["crates/*", "."]
+
 [package]
 name = "sound-mimic"
 version = "0.1.0"
@@ -23,6 +27,11 @@ wt = { package = "wasmtime", version = "27.0.0" }
 [target.'cfg(target_os = "macos")'.dependencies]
 apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
 
-[profile.release]
-# lto = true
-debug = true
+# Enable a small amount of optimization in the dev profile.
+[profile.dev]
+debug = false
+opt-level = 1
+
+# Enable a large amount of optimization in the dev profile for dependencies.
+[profile.dev.package."*"]
+opt-level = 3
