--- a/tools/mimic/Cargo.toml
+++ b/tools/mimic/Cargo.toml
@@ -5,16 +5,13 @@ edition = "2024"
 
 [features]
 apple-accelerate = ["dep:apple-accelerate"]
-profile = []
 
 [dependencies]
 argh = { workspace = true }
 hound = { workspace = true }
 sound-mimic = { workspace = true }
-fft = { workspace = true }
-nalgebra = { workspace = true }
-ordered-float = "4.2.0"
-rayon = "1.8.0"
+burn = { version = "0.15.0", features = ["tch"] }
+indicatif = "0.17.9"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
