--- a/tools/mimic/Cargo.toml
+++ b/tools/mimic/Cargo.toml
@@ -15,6 +15,7 @@ fft = { workspace = true }
 nalgebra = { workspace = true }
 ordered-float = "4.2.0"
 rayon = "1.8.0"
+indicatif = "0.17.9"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
