--- a/tools/mimic/Cargo.toml
+++ b/tools/mimic/Cargo.toml
@@ -10,8 +10,9 @@ apple-accelerate = ["dep:apple-accelerate"]
 argh = { workspace = true }
 hound = { workspace = true }
 sound-mimic = { workspace = true }
-burn = { version = "0.15.0", features = ["tch"] }
+burn = { version = "0.15.0", features = ["accelerate", "ndarray"] }
 indicatif = "0.17.9"
+rayon = { version = "1.10.0" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
