--- a/tools/mimic/Cargo.toml
+++ b/tools/mimic/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
-apple-accelerate = ["dep:apple-accelerate"]
+apple-accelerate = ["blas-src/accelerate", "ndarray/blas"]
 profile = []
 
 [dependencies]
@@ -12,10 +12,10 @@ argh = { workspace = true }
 hound = { workspace = true }
 sound-mimic = { workspace = true }
 fft = { workspace = true }
-nalgebra = { workspace = true }
+ndarray = { workspace = true, features = ["rayon"] }
+ndarray-stats = { workspace = true }
+ndarray-linalg = { workspace = true }
+blas-src = { version = "0.10.0", optional = true }
 ordered-float = "4.2.0"
 rayon = "1.8.0"
 indicatif = "0.17.9"
-
-[target.'cfg(target_os = "macos")'.dependencies]
-apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
