--- a/tools/mimic/Cargo.toml
+++ b/tools/mimic/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [features]
+default = ["apple-accelerate"]
 apple-accelerate = ["dep:apple-accelerate"]
-profile = []
 
 [dependencies]
 argh = { workspace = true }
