--- a/tools/mimic/Cargo.toml
+++ b/tools/mimic/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [features]
 apple-accelerate = ["dep:apple-accelerate"]
-profile = []
+cblas = ["dep:cblas-sys", "dep:blas-src"]
 
 [dependencies]
 argh = { workspace = true }
@@ -16,6 +16,6 @@ nalgebra = { workspace = true }
 ordered-float = "4.2.0"
 rayon = "1.8.0"
 indicatif = "0.17.9"
-
-[target.'cfg(target_os = "macos")'.dependencies]
+blas-src = { version = "0.10.0", optional = true }
+cblas-sys = { version = "0.1.4", optional = true }
 apple-accelerate = { optional = true, git = "https://github.com/zetanumbers/apple-accelerate.git" }
