--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ anyhow = { workspace = true }
 tracing = "0.1.40"
 tracing-timing = "0.6.0"
 
+[profile.dev]
+opt-level = 1
+
 [profile.release]
 # lto = true
 debug = true
